Added interval-hours and resize-hours placeholders

--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -85,7 +85,7 @@ command-info-entry-resize: '<aqua>Resize:'
 command-info-entry-resize-by: '<white>- by: <dark_aqua>{resize-by} block(s)'
 command-info-entry-resize-time: '<white>- time: <hover:show_text:"{resize-time-minutes} minute(s)"><dark_aqua>{resize-time-seconds} second(s)</hover>'
 command-info-entry-resize-interval: '<white>- interval: {resize-interval}'
-command-info-placeholder-resize-interval: '<dark_aqua>{interval} minute(s)'
+command-info-placeholder-resize-interval: '<hover:show_text:"{interval-hours} hour(s)"><dark_aqua>{interval-minutes} minute(s)</hover>'
 command-info-placeholder-resize-no-interval: '<red>no'
 command-info-entry-resize-lastresize: '<white>- last resize: <dark_aqua>{resize-lastresize}'
 command-info-entry-resize-crontask: '<white>- crontask: {resize-crontask}'
