--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,41 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <!--    Disable paper remapping-->
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
+
+                            <filters>
+                                <filter>
+                                    <artifact>*.*</artifact>
+                                    <excludes>
+                                        <exclude>module-info.class</exclude>
+                                        <exclude>META-INF/*.MF</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <relocations>
+                                <!--    Cron utils    -->
                                 <relocation>
                                     <pattern>com.cronutils</pattern>
-                                    <shadedPattern>pl.ynfuien.yresizingborders.libs.com.cronutils</shadedPattern>
+                                    <shadedPattern>pl.ynfuien.yresizingborders.libs.cronutils</shadedPattern>
+                                </relocation>
+                                <!--    Dev library    -->
+                                <relocation>
+                                    <pattern>pl.ynfuien.ydevlib</pattern>
+                                    <shadedPattern>pl.ynfuien.yresizingborders.libs.ydevlib</shadedPattern>
+                                </relocation>
+                                <!--    BStats    -->
+                                <relocation>
+                                    <pattern>org.bstats</pattern>
+                                    <shadedPattern>pl.ynfuien.yresizingborders.libs.bstats</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -74,6 +104,11 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -99,6 +134,22 @@
             <artifactId>placeholderapi</artifactId>
             <version>2.11.5</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!--        Dev library -->
+        <dependency>
+            <groupId>com.github.Ynfuien</groupId>
+            <artifactId>YDevLib</artifactId>
+            <version>1.0.2</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!--        BStats-->
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>3.0.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
